kubernetes/platform/teleport-agent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teleport-agent
  labels:
    aetheriscloud.fr/tier: platform
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
